package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "material",
    srcs = glob(["*.ts"]),
    tsconfig = "//js-client/src:tsconfig.json",
    deps = [
        "@angular//packages/core",
        "@angular_material//src/lib:material",
    ],
)
