package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")

sass_binary(
    name = "todos-styles",
    src = "todos.component.scss",
    deps = ["//js-client/src/styles:shared"],
)

ng_module(
    name = "todos",
    srcs = [
        "todos.component.ts",
        "todos.module.ts",
    ],
    assets = [
        "todos.component.html",
        ":todos-styles",
    ],
    tsconfig = "//js-client/src:tsconfig.json",
    deps = [
        "//js-client/src/lib",
        "//js-client/src/material",
        "//js-client/src/reducers",
        "@angular//packages/common",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular//packages/router",
        "@npm//@ngrx/store",
        "@rxjs",
    ],
)
