# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")

sass_binary(
    name = "todos-styles",
    src = "todos.component.scss",
    deps = ["//js-client/src/styles:shared"],
)

ng_module(
    name = "todos",
    srcs = [
        "todo.ts",
        "todos.component.ts",
        "todos.module.ts",
        "todos.service.ts",
    ],
    assets = [
        "todos.component.html",
        ":todos-styles",
    ],
    tsconfig = "//js-client/src:tsconfig.json",
    deps = [
        "//js-client/src/lib",
        "//js-client/src/material",
        "@angular//packages/common",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular//packages/router",
        "@rxjs",
    ],
)
