# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Instantiate the Bazel rules we use in this build file.
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

# The package rule declares this directory as a Bazel package
# which scopes targets defined in this Build file under this package.
# The visibility parameter declares which packages can call targets
# in this package. In this case, we're saying anyone can call these targets.
# See https://docs.bazel.build/versions/master/be/functions.html#package
package(default_visibility = ["//visibility:public"])

# Compile Sass source files and produce css
# See https://github.com/bazelbuild/rules_sass
sass_binary(
    # the name of this target
    name = "todos-styles",
    # the source file for this Sass
    src = "todos.component.scss",
    # the dependencies needed to compile
    deps = ["//js-client/src/styles:shared"],
)

# Use Angular's ng tool to compile the source code into an NgModule
# It behaves the same as `ts_library` but with additional attributes
# See https://github.com/alexeagle/angular-bazel-example/wiki/Angular-rules#compiling-angular-templates
ng_module(
    name = "todos",
    # the sourcefiles used to compile
    srcs = [
        "todo.ts",
        "todos.component.ts",
        "todos.module.ts",
        "todos.service.ts",
    ],
    # the HTML and Sass targets that output assets
    # we use in this module
    assets = [
        "todos.component.html",
        ":todos-styles",
    ],
    # the tsconfig to pass to the typescript compiler
    tsconfig = "//js-client/src:tsconfig.json",
    # other dependencies we need to compile this module
    deps = [
        "//js-client/src/lib",
        "//js-client/src/material",
        "@angular//packages/common",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular//packages/router",
        "@rxjs",
    ],
)
