# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

java_test(
    name = "TodoController",
    srcs = ["TodoControllerTest.java"],
    deps = [
        "//java-spring-boot:todo",
        "//java-spring-boot:todo_controller",
	"@junit_junit//jar",
        "@org_springframework_boot_spring_boot_starter_test//jar",
        "@org_springframework_boot_spring_boot_test//jar",
        "@org_springframework_boot_spring_boot_test_autoconfigure//jar",
        "@org_springframework_boot_spring_boot_starter_web//jar",
        "@org_springframework_spring_test//jar",
        "@org_springframework_spring_beans//jar",
    ],
)
